--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ h1{
     height: 300px;
     width: 200px;
     border-radius: 10px;
+    box-shadow: 10px 6px 5px rgb(238, 255, 0);
 }
 
 .card_2{
@@ -46,6 +47,7 @@ h1{
     height: 300px;
     width: 200px;
     border-radius: 10px;
+    box-shadow: 10px 6px 5px rgb(0, 255, 132);
 
 }
     
